# vsdt-lab-work-5

./: .gitignore  CMakeLists.txt  README.md
include/: task1.h  task2.h  task3.h
resources/: Task1.qml  Task2.qml  Task3.qml  main.qml  qml.qrc
src/: CMakeLists.txt  main.cpp  main.qml  task1.cpp  task2.cpp  task3.cpp
